--- a/resources/etc_default_tomcat7.template
+++ b/resources/etc_default_tomcat7.template
@@ -1,15 +1,15 @@
 # Run Tomcat as this user ID. Not setting this or leaving it blank will use the
 # default of tomcat7.
-TOMCAT7_USER=tomcat7
+TOMCAT7_USER={{os-user}}
 
 # Run Tomcat as this group ID. Not setting this or leaving it blank will use
 # the default of tomcat7.
-TOMCAT7_GROUP=tomcat7
+TOMCAT7_GROUP={{os-user}}
 
 # The home directory of the Java development kit (JDK). You need at least
 # JDK version 6. If JAVA_HOME is not set, some common directories for
 # OpenJDK, the Oracle JDK, and various Java SE 6+ versions are tried.
-#JAVA_HOME=/usr/lib/jvm/openjdk-6-jdk
+JAVA_HOME={{java-home}}
 
 # You may pass JVM startup parameters to Java here. If unset, the default
 # options will be: -Djava.awt.headless=true -Xmx128m -XX:+UseConcMarkSweepGC
@@ -18,18 +18,21 @@ TOMCAT7_GROUP=tomcat7
 # response time). If you use that option and you run Tomcat on a machine with
 # exactly one CPU chip that contains one or two cores, you should also add
 # the "-XX:+CMSIncrementalMode" option.
-JAVA_OPTS="-Djava.awt.headless=true -Xmx128m -XX:+UseConcMarkSweepGC"
+JAVA_OPTS="-Djava.awt.headless=true -server -Dfile.encoding=UTF8 {{java-opts}}"
 
 # To enable remote debugging uncomment the following line.
 # You will then be able to use a java debugger on port 8000.
 #JAVA_OPTS="${JAVA_OPTS} -Xdebug -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n"
+{% if contains-catalina-opts? %}
+CATALINA_OPTS="{{caatalina-opts}}"
 
-# Java compiler to use for translating JavaServer Pages (JSPs). You can use all
+{% endif %}# Java compiler to use for translating JavaServer Pages (JSPs). You can use all
 # compilers that are accepted by Ant's build.compiler property.
 #JSP_COMPILER=javac
 
-# Use the Java security manager? (yes/no, default: no)
-#TOMCAT7_SECURITY=no
+# Use the Java security manager? (yes/no, default: no){% if wo-tomcat-security? %}
+TOMCAT7_SECURITY=no{% else %}
+#TOMCAT7_SECURITY=no{% endif %}
 
 # Number of days to keep logfiles in /var/log/tomcat7. Default is 14 days.
 #LOGFILE_DAYS=14
