--- a/resources/etc_tomcat7_server.xml.template
+++ b/resources/etc_tomcat7_server.xml.template
@@ -19,7 +19,7 @@
      define subcomponents such as "Valves" at this level.
      Documentation at /docs/config/server.html
  -->
-<Server port="{{shutdown-port}}" shutdown="SHUTDOWN">{% if {{start-ssl}} %}
+<Server port="{{shutdown-port}}" shutdown="SHUTDOWN">{% if start-ssl %}
   <Listener className="org.apache.catalina.core.AprLifecycleListener" SSLEngine="on" />{% endif %}
   <Listener className="org.apache.catalina.startup.VersionLoggerListener" />
   <Listener className="org.apache.catalina.core.JasperListener" />
@@ -47,7 +47,7 @@
 
     <Connector executor="tomcatThreadPool"
                port="{{connector-port}}"
-               protocol="{{connector-protocol}}"{% if {{contains-uri-encode?}} %}
+               protocol="{{connector-protocol}}"{% if contains-uri-encode? %}
                URIEncoding="{{uri-encoding}}"{% endif %}
                connectionTimeout="{{connection-timeout}}" />
 
