--- a/resources/etc_tomcat7_server.xml.template
+++ b/resources/etc_tomcat7_server.xml.template
@@ -19,9 +19,9 @@
      define subcomponents such as "Valves" at this level.
      Documentation at /docs/config/server.html
  -->
-<Server port="{{shutdown-port}}" shutdown="SHUTDOWN">{% if start-ssl %}
+<Server port="{{shutdown-port}}" shutdown="SHUTDOWN">
+  <Listener className="org.apache.catalina.startup.VersionLoggerListener" />{% if start-ssl %}
   <Listener className="org.apache.catalina.core.AprLifecycleListener" SSLEngine="on" />{% endif %}
-  <Listener className="org.apache.catalina.startup.VersionLoggerListener" />
   <Listener className="org.apache.catalina.core.JasperListener" />
   <Listener className="org.apache.catalina.core.JreMemoryLeakPreventionListener" />
   <Listener className="org.apache.catalina.mbeans.GlobalResourcesLifecycleListener" />
