--- a/resources/etc_default_tomcat7.template
+++ b/resources/etc_default_tomcat7.template
@@ -24,7 +24,7 @@ JAVA_OPTS="-Djava.awt.headless=true -server -Dfile.encoding=UTF8 {{java-opts}}"
 # You will then be able to use a java debugger on port 8000.
 #JAVA_OPTS="${JAVA_OPTS} -Xdebug -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n"
 {% if contains-catalina-opts? %}
-CATALINA_OPTS="{{caatalina-opts}}"
+CATALINA_OPTS="{{catalina-opts}}"
 
 {% endif %}# Java compiler to use for translating JavaServer Pages (JSPs). You can use all
 # compilers that are accepted by Ant's build.compiler property.
