--- a/resources/etc_tomcat8_catalina.properties.template
+++ b/resources/etc_tomcat8_catalina.properties.template
@@ -50,7 +50,7 @@ org.apache.jasper.,org.apache.naming.,org.apache.tomcat.
 #       ${catalina.base} path or the ${catalina.home} path contains a comma.
 #       Because double quotes are used for quoting, the double quote character
 #       may not appear in a path.
-common.loader="${catalina.base}/lib","${catalina.base}/lib/*.jar","${catalina.home}/lib","${catalina.home}/lib/*.jar","${catalina.home}/common/classes","${catalina.home}/common/*.jar","{{common-loader}}"
+common.loader="${catalina.base}/lib","${catalina.base}/lib/*.jar","${catalina.home}/lib","${catalina.home}/lib/*.jar","${catalina.home}/common/classes","${catalina.home}/common/*.jar"{{common-loader|safe}}
 
 #
 # List of comma-separated paths defining the contents of the "server"
